[package]
name = "note2svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dict = "0.1.5"
glob = "0.3.0"
#roxmltree = "0.15.1"
#plist = "1.3.1"
xmltree = "0.10.3"
base64 = "0.13.1"