[package]
name = "note2svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dict = "0.1.5"
glob = "0.3.0"
plist = "1.3.1"
itertools = "0.10.5"
byteorder = "1.4.3"